--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,6 @@
       and advance your career.
     </p>
     <h3>Training Programs</h3>
-    <button src="courses.html">View Programs</button>
+    <a href="courses.html"><button>View Programs</button></a>
   </body>
 </html>
