Added the logo and styles

--- a/courses.html
+++ b/courses.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Courses Page</title>
   </head>
   <body>
+    <img src="download.png" alt="Capgemini Logo" />
     <h1>Training Courses</h1>
     <p>
       Explore our range of training courses designed to enhance your skills and
@@ -18,5 +20,6 @@
       <li>Cloud Computing</li>
       <li>Cybersecurity</li>
     </ul>
+    <a href="homepage.html"><button>Back to Home</button></a>
   </body>
 </html>
