--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
   </head>
   <body>
+    <img src="download.png" alt="Capgemini Logo" />
     <h1>Welcome to Capgemini Training Portal</h1>
     <p>This is the home page for the Capgemini Training Program.</p>
     <h2>Training Overview</h2>
